Improved commentary and removed checkstyle suppress comments.